# minesweeper_solver

./: CMakeLists.txt  README.md  main.cpp
include/: Board.h  Cell.h  Controller.h  Renderer.h
src/: Board.cpp  Cell.cpp  Controller.cpp  Renderer.cpp
